Fixed a spacing issue in the cart item list on small screens

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -48,7 +48,7 @@
     text-align: center;
   }
   .details {
-    margin: 0!important;
+    margin: 1rem 0!important;
   }
 }
 
